--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/package.json",
   "name": "portfolio",
+  "homepage": "https://sumanbhardwaj17.github.io/My-Portfolio-Website/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
